--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -8,7 +8,7 @@ This plugin manages secrets on [shuttle](https://www.shuttle.rs).
 Add `shuttle-secrets` to the dependencies for your service, and add a `Secrets.toml` to the root of your project
 with the secrets you'd like to store. Make sure to add `Secrets.toml` to a `.gitignore` to omit your secrets from version control.
 
-Next, pass `#[shuttle_secrets::Secrets] secret_store: SecretStore` as an argument to your `shuttle_service::main` function.
+Next, pass `#[shuttle_secrets::Secrets] secret_store: SecretStore` as an argument to your `shuttle_runtime::main` function.
 `SecretStore::get` can now be called to retrieve your API keys and other secrets at runtime.
 
 ## Local secrets
@@ -22,11 +22,11 @@ files.
 ## Example
 This snippet shows a shuttle rocket main function that uses the `shuttle_secrets::Secrets` attribute to gain access to a `SecretStore`.
 
-```rust lib.rs
-#[shuttle_service::main]
+```rust main.rs
+#[shuttle_runtime::main]
 async fn rocket(
     #[shuttle_secrets::Secrets] secret_store: SecretStore,
-) -> shuttle_service::ShuttleRocket {
+) -> ShuttleRocket {
     // get secret defined in `Secrets.toml` file.
     let secret = if let Some(secret) = secret_store.get("MY_API_KEY") {
         secret
@@ -37,7 +37,7 @@ async fn rocket(
     let state = MyState { secret };
     let rocket = rocket::build().mount("/", routes![secret]).manage(state);
 
-    Ok(rocket)
+    Ok(rocket.into())
 }
 ```
 
