--- a/examples/actix.mdx
+++ b/examples/actix.mdx
@@ -26,26 +26,30 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.2.1"
-shuttle-service = { version = '0.11.0', features = ["web-actix-web"] }
+actix-web = "4.3.1"
+shuttle-actix-web = { version = "0.12.0" }
+shuttle-runtime = { version = "0.12.0" }
+tokio = { version = "1.26.0" }
 ```
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
+```Rust main.rs
 use actix_web::{get, web::ServiceConfig};
-use shuttle_service::ShuttleActixWeb;
+use shuttle_actix_web::ShuttleActixWeb;
 
 #[get("/hello")]
 async fn hello_world() -> &'static str {
     "Hello World!"
 }
 
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn actix_web(
-) -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Sync + Send + Clone + 'static> {
-    Ok(move |cfg: &mut ServiceConfig| {
+) -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send + Clone + 'static> {
+    let config = move |cfg: &mut ServiceConfig| {
         cfg.service(hello_world);
-    })
+    };
+
+    Ok(config.into())
 }
 ```
 
@@ -75,12 +79,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.2.1"
-shuttle-service = { version = '0.11.0', features = ["web-actix-web"] }
+actix-web = "4.3.1"
+shuttle-actix-web = { version = "0.12.0" }
+shuttle-runtime = { version = "0.12.0" }
+serde = "1.0.148"
+shuttle-shared-db = { version = "0.12.0", features = ["postgres"] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
+tokio = { version = "1.26.0" }
 ```
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
+```Rust main.rs
 use actix_web::middleware::Logger;
 use actix_web::{
     error, get, post,
@@ -88,7 +97,8 @@ use actix_web::{
     Result,
 };
 use serde::{Deserialize, Serialize};
-use shuttle_service::{error::CustomError, ShuttleActixWeb};
+use shuttle_actix_web::ShuttleActixWeb;
+use shuttle_runtime::{CustomError};
 use sqlx::{Executor, FromRow, PgPool};
 
 #[get("/{id}")]
@@ -118,17 +128,17 @@ struct AppState {
     pool: PgPool,
 }
 
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn actix_web(
     #[shuttle_shared_db::Postgres] pool: PgPool,
-) -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Sync + Send + Clone + 'static> {
+) -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send + Clone + 'static> {
     pool.execute(include_str!("../schema.sql"))
         .await
         .map_err(CustomError::new)?;
 
     let state = web::Data::new(AppState { pool });
 
-    Ok(move |cfg: &mut ServiceConfig| {
+    let config = move |cfg: &mut ServiceConfig| {
         cfg.service(
             web::scope("/todos")
                 .wrap(Logger::default())
@@ -136,7 +146,9 @@ async fn actix_web(
                 .service(add)
                 .app_data(state),
         );
-    })
+    };
+
+    Ok(config.into())
 }
 
 #[derive(Deserialize)]
@@ -149,7 +161,6 @@ struct Todo {
     pub id: i32,
     pub note: String,
 }
-
 ```
 
 And your `schema.sql` should look like this:
@@ -189,34 +200,33 @@ name = "hello-world"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-
 [dependencies]
-shuttle-service = { version = "0.11.0", features = ["web-actix-web"] }
-shuttle-static-folder = "0.11.3"
-actix-web = "4.2.1"
-actix-ws = "0.2.5"
 actix-files = "0.6.2"
+actix-web = "4.3.1"
+actix-ws = "0.2.5"
+chrono = { version = "0.4.23", features = ["serde"] }
 futures = "0.3"
 reqwest = "0.11"
-tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-chrono = { version = "0.4.23", features = ["serde"] }
+shuttle-actix-web = { version = "0.12.0" }
+shuttle-runtime = { version = "0.12.0" }
+shuttle-static-folder = "0.12.0"
+tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
 tracing = "0.1"
 ```
 
 The structure for this example is:
 ```
 -> src
-    -> lib.rs
+    -> main.rs
 -> static
     ->  index.html
 ```
 
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
+```Rust main.rs
 use actix_files::NamedFile;
 use actix_web::{
     web::{self, ServiceConfig},
@@ -226,7 +236,7 @@ use actix_ws::Message;
 use chrono::{DateTime, Utc};
 use futures::StreamExt;
 use serde::Serialize;
-use shuttle_service::ShuttleActixWeb;
+use shuttle_actix_web::ShuttleActixWeb;
 use std::{
     sync::{atomic::AtomicUsize, Arc},
     time::Duration,
@@ -323,9 +333,9 @@ async fn index() -> impl Responder {
         .map_err(|e| actix_web::error::ErrorInternalServerError(e))
 }
 
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn actix_web(
-) -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Sync + Send + Clone + 'static> {
+) -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send + Clone + 'static> {
     // We're going to use channels to communicate between threads.
     // api state channel
     let (tx_api_state, rx_api_state) = watch::channel(ApiStateMessage::default());
@@ -398,21 +408,21 @@ async fn actix_web(
 
     let app_state = web::Data::new((tx_ws_state, rx_api_state));
 
-    Ok(move |cfg: &mut ServiceConfig| {
+    let config = move |cfg: &mut ServiceConfig| {
         cfg.service(web::resource("/").route(web::get().to(index)))
             .service(
                 web::resource("/ws")
                     .app_data(app_state)
                     .route(web::get().to(websocket)),
             );
-    })
+    };
+    Ok(config.into())
 }
 
 async fn get_api_status(client: &reqwest::Client) -> bool {
     let response = client.get(STATUS_URI).send().await;
     response.is_ok()
 }
-
 ```
 
 Your `index.html` should look like this:
