--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -36,18 +36,18 @@ name = "hello-world"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-
 [dependencies]
-anyhow = "1.0.62"
+anyhow = "1.0.66"
+shuttle-serenity = { version = "0.12.0" }
+shuttle-runtime = { version = "0.12.0" }
 serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-shuttle-secrets = "0.11.0"
-shuttle-service = { version = "0.11.0", features = ["bot-serenity"] }
-tracing = "0.1.35"
+shuttle-secrets = "0.12.0"
+tokio = { version = "1.26.0" }
+tracing = "0.1.37"
 ```
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
+```Rust main.rs
 use anyhow::anyhow;
 use serenity::async_trait;
 use serenity::model::channel::Message;
@@ -73,10 +73,10 @@ impl EventHandler for Bot {
     }
 }
 
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn serenity(
     #[shuttle_secrets::Secrets] secret_store: SecretStore,
-) -> shuttle_service::ShuttleSerenity {
+) -> shuttle_serenity::ShuttleSerenity {
     // Get the discord token set in `Secrets.toml`
     let token = if let Some(token) = secret_store.get("DISCORD_TOKEN") {
         token
@@ -92,7 +92,7 @@ async fn serenity(
         .await
         .expect("Err creating client");
 
-    Ok(client)
+    Ok(client.into())
 }
 ```
 And your `Secrets.toml` file should look like this (and have your token inside):
@@ -153,22 +153,23 @@ name = "serenity-postgres"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
 
 [dependencies]
-anyhow = "1.0.62"
-serde = "1.0"
+anyhow = "1.0.66"
+serde = "1.0.148"
 serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-shuttle-secrets = "0.11.0"
-shuttle-service = { version = "0.11.0", features = ["bot-serenity"] }
-shuttle-shared-db = { version = "0.11.0", features = ["postgres"] }
-sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
-tracing = "0.1.35"
+shuttle-secrets = "0.12.0"
+shuttle-serenity = { version = "0.12.0" }
+shuttle-runtime = { version = "0.12.0" }
+shuttle-shared-db = { version = "0.12.0", features = ["postgres"] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
+tokio = { version = "1.26.0" }
+tracing = "0.1.37"
 ```
-Your `lib.rs` should look like this:
+Your `main.rs` should look like this:
 
-```Rust lib.rs
-// lib.rs
+```Rust main.rs
+// main.rs
 use anyhow::Context as _;
 use serenity::async_trait;
 use serenity::model::application::command::CommandOptionType;
@@ -294,11 +295,11 @@ impl EventHandler for Bot {
     }
 }
 
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn serenity(
     #[shuttle_shared_db::Postgres] pool: PgPool,
     #[shuttle_secrets::Secrets] secret_store: SecretStore,
-) -> shuttle_service::ShuttleSerenity {
+) -> shuttle_serenity::ShuttleSerenity {
     // Get the discord token set in `Secrets.toml`
     let token = secret_store
         .get("DISCORD_TOKEN")
@@ -322,7 +323,7 @@ async fn serenity(
         .await
         .expect("Err creating client");
 
-    Ok(client)
+    Ok(client.into())
 }
 ```
 
