--- a/resources/shuttle-persist.mdx
+++ b/resources/shuttle-persist.mdx
@@ -10,17 +10,17 @@ Add `shuttle-persist` to the dependencies for your service. You can get this res
 ## Example
 This snippet shows a shuttle rocket main function that uses the `shuttle_persist::Persist` attribute to provision and get access to a `PersistInstance`.
 
-```rust lib.rs
-#[shuttle_service::main]
+```rust main.rs
+#[shuttle_runtime::main]
 async fn rocket(
     #[shuttle_persist::Persist] persist: PersistInstance,
-) -> shuttle_service::ShuttleRocket {
+) -> ShuttleRocket {
     let state = MyState { persist };
     let rocket = rocket::build()
         .mount("/", routes![retrieve, add])
         .manage(state);
 
-    Ok(rocket)
+    Ok(rocket.into())
 }
 ```
 
