--- a/tutorials/url-shortener.mdx
+++ b/tutorials/url-shortener.mdx
@@ -99,9 +99,9 @@ To initialize a rocket project with boilerplate, I can use the shuttle CLI `init
 cargo shuttle init --rocket url-shortener
 ```
 
-This leaves me with the following `lib.rs` file:
+This leaves me with the following `main.rs` file:
 
-```rust lib.rs
+```rust main.rs
 #[macro_use]
 extern crate rocket;
 
@@ -110,11 +110,11 @@ fn index() -> &'static str {
     "Hello, world!"
 }
 
-#[shuttle_service::main]
-async fn rocket() -> shuttle_service::ShuttleRocket {
+#[shuttle_runtime::main]
+async fn rocket() -> shuttle_rocket::ShuttleRocket {
     let rocket = rocket::build().mount("/hello", routes![index]);
 
-    Ok(rocket)
+    Ok(rocket.into())
 }
 ```
 
@@ -127,11 +127,11 @@ name = "url-shortener"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-
 [dependencies]
 rocket = "0.5.0-rc.2"
-shuttle-service = { version = "0.11.0", features = ["web-rocket"] }
+shuttle-rocket = { version = "0.12.0" }
+shuttle-runtime = { version = "0.12.0" }
+tokio = { version = "1.26.0" }
 ```
 
 The `init` command also created a new shuttle project for us. This starts an
@@ -144,7 +144,7 @@ $ cargo shuttle deploy
    Packaging url-shortener v0.1.0 (/private/shuttle/examples/url-shortener)
    Archiving Cargo.toml
    Archiving Cargo.toml.orig
-   Archiving src/lib.rs
+   Archiving src/main.rs
    Compiling tracing-attributes v0.1.20
    Compiling tokio-util v0.6.9
    Compiling multer v2.0.2
@@ -152,7 +152,7 @@ $ cargo shuttle deploy
    Compiling rocket_http v0.5.0-rc.1
    Compiling rocket_codegen v0.5.0-rc.1
    Compiling rocket v0.5.0-rc.1
-   Compiling shuttle-service v0.11.0
+   Compiling shuttle-service v0.12.0
    Compiling url-shortener v0.1.0 (/opt/shuttle/crates/url-shortener)
     Finished dev [unoptimized + debuginfo] target(s) in 1m 01s
 
@@ -185,10 +185,10 @@ Shuttle does a lot of this stuff for you - I just didn't remember how. I
 quickly head over to the
 [shuttle shared database](https://docs.shuttle.rs/resources/shuttle-shared-db)
 section in the docs. I added the `sqlx` dependency to `Cargo.toml` and change
-one line in `lib.rs`:
+one line in `main.rs`:
 
 ```rust
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn rocket(#[shuttle_shared_db::Postgres] pool: PgPool) -> ShuttleRocket {
     // [...]
 }
