feat: add protoc installation instructions

--- a/introduction/installation.mdx
+++ b/introduction/installation.mdx
@@ -13,7 +13,10 @@ which will automatically install the correct target for your system. to install 
 cargo binstall cargo-shuttle
 ```
 
-While it will be a bit slower, you can also install directly with cargo:
+While it will be a bit slower you can also install directly with cargo, but first you
+need to install `protoc`, check out our [protoc installation guide](../support/installing-protoc).
+
+Then, run:
 
 ```sh
 cargo install cargo-shuttle
