--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -3,7 +3,8 @@ title: "Quick Start"
 ---
 
 We will assume that you have already installed shuttle. If you haven't, you should
-check out our [installation](./installation) section.
+check out our [installation](./installation) section. To run commands with the shuttle
+command line interface (`cargo shuttle`), you'll also need to [install protoc](../support/installing-protoc).
 
 To initialize your project, simply write:
 
