--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -5,15 +5,14 @@ title: "Troubleshooting"
 This section is aimed at collecting common issues users have to provide quick debug solutions.
 
 <AccordionGroup>
+  <Accordion title="I get an error about protoc not being installed, or protoc being the wrong version.">
+    Since `v0.12.0` `protoc` is a requirement to use and install `cargo-shuttle`. To install `protoc`, here
+    check out our installation guide: [installing protoc](./installing-protoc)
+  </Accordion>
   <Accordion title="I've updated shuttle and my project isn't working anymore.">
     If you've recently updated shuttle, in order to get your project back up, you need to run:
     **`cargo shuttle project rm`** followed by
     **`cargo shuttle project new`** and everything should be back in working order.
-  </Accordion>
-  <Accordion title="I can't deploy nor run locally, what should I do? (Windows)">
-    Some projects currently fail to deploy on Windows. The bug is related to&nbsp;[this Cargo meta-issue](https://github.com/rust-lang/cargo/issues/9770). Cargo is still trying to determine how to fix them properly in general.
-
-    As a temporary fix, you can try running **`cargo build`** before **`cargo shuttle deploy`** or **`cargo shuttle run`**.
   </Accordion>
   <Accordion title="I'm struggling to install shuttle on my M1/M2 Mac, what should I do?">
     There's a known bug with arm64 because of the openssl crates being built for x86, rather than arm64. In order to get around that issue, you can either run:
