Clarify installation + docs fixes

--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -2,9 +2,10 @@
 title: "Quick Start"
 ---
 
-We will assume that you have already installed shuttle. If you haven't, you should
-check out our [installation](./installation) section. To run commands with the shuttle
-command line interface (`cargo shuttle`), you'll also need to [install protoc](../support/installing-protoc).
+We will assume that you have already installed shuttle and logged in.
+If you haven't, you should check out our [installation](./installation) section.
+To run commands with the shuttle command line interface (`cargo shuttle`),
+you'll also need to [install protoc](../support/installing-protoc).
 
 To initialize your project, simply write:
 
@@ -24,9 +25,9 @@ And to deploy it:
 cargo shuttle deploy
 ```
 
-*In case you haven't commited the changes of your project to your repo, you'll have to add a `--allow-dirty` flag.*
+*In case you haven't commited the changes to your repo, you'll have to add a `--allow-dirty` flag.*
 
 You can also run your project locally for development, check out our [local run](./local-run) section.
 
-Feel free to build on-top of the generated `hello-world` example or take a stab
+Feel free to build on top of the generated `hello-world` example or take a stab
 at one of our [examples](../examples/axum).
