Add links for windows troubleshooting

--- a/support/installing-protoc.mdx
+++ b/support/installing-protoc.mdx
@@ -18,7 +18,9 @@ protoc --version
 ```
 
 **Note:** *You might need to restart your shell.
-If you are using the integrated terminal in VS Code, you need to restart VS Code.*
+If you are using the integrated terminal in VS Code, you need to restart VS Code.
+See [here](https://docs.chocolatey.org/en-us/troubleshooting#my-path-is-not-getting-updated)
+for more troubleshooting tips, or feel free to ask for help in our [Discord](https://discord.gg/shuttle).*
 
 ### Linux and Mac
 
