refactor: fix faq typo

--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -30,7 +30,7 @@ This section is aimed at collecting common questions users have to provide docum
     Yes, you can create a SeaORM connection from the sqlx pool Shuttle passes to you when you provision a SQL database. You can take a look at the example [here](https://github.com/shuttle-hq/shuttle/issues/179#issuecomment-1203536025).
   </Accordion>
   <Accordion title="Can I rename my shuttle project?">
-    Certainly. Just create a `Shuttle.toml` file in the some folder where your `Cargo.toml` is and add `name = "your-project-name`.
+    Certainly. Just create a `Shuttle.toml` file in the same directory where your `Cargo.toml` is and add `name = "your-project-name"`.
   </Accordion>
 </AccordionGroup>
 
