feat: document compute resource caps

--- a/introduction/node-cli.mdx
+++ b/introduction/node-cli.mdx
@@ -52,5 +52,6 @@ If you wish to stop your deployment: `npm run stop`
 
 If you want to install dependencies for create-shuttle-app manually, these are the required native dependencies:
 
-* Rust version 1.65: https://www.rust-lang.org/tools/install
+* Rust version 1.68: https://www.rust-lang.org/tools/install
 * cargo-shuttle latest version: https://docs.shuttle.rs/introduction/installation
+* Protoc >= 3.19: [protoc installation guide](../support/installing-protoc)
