--- a/introduction/shuttle-commands.mdx
+++ b/introduction/shuttle-commands.mdx
@@ -4,7 +4,8 @@ title: "Command Line Interface"
 
 ## Overview
 
-All interaction with the shuttle services is through the command line interface (CLI).  A combination of commands, and sub-commands, each with options, allow a variety of management tasks to be performed.
+Interaction with the shuttle services is through the Command Line Interface (CLI).
+A combination of commands, and sub-commands, each with options, allow a variety of management tasks to be performed.
 
 Any given command is issued in the format: `cargo shuttle [OPTIONS] <COMMAND>`
 
@@ -24,37 +25,38 @@ Options can be passed in with commands to customize a command's, or a sub-comman
 
 *Tip: Run a command with the `--help` flag to see available subcommands*
 
-The core shuttle commands are:
+The shuttle commands are:
 
-| Command    |                      Explanation                           |
-| ---------- | ---------------------------------------------------------- |
-| deploy     |  deploy a shuttle service                                  |
-| deployment |  manage deployments of a shuttle service                   |
-| init       |  create a new shuttle service                              |
-| generate   |  generate shell completions                                |
-| status     |  view the status of a shuttle service                      |
-| logs       |  view the logs of deployment in this shuttle service       |
-| stop       |  stop the currently running deployment                     |
-| secrets    |  manage secrets for this shuttle service                   |
-| login      |  login to the shuttle platform                             |
-| logout     |  logout from the shuttle platform                          |
-| run        |  run a shuttle service locally                             |
-| feedback   |  open the create new issue page on the shuttle github      |
-| project    |  manage a project on shuttle                               |
-| help       |  Print this message or the help of the given subcommand(s) |
+| Command    | Explanation |
+| ---------- | ----------- |
+| deploy     | Deploy a shuttle service |
+| deployment | Manage deployments of a shuttle service |
+| resource   | Manage resources of a shuttle project |
+| init       | Create a new shuttle project |
+| generate   | Generate shell completions |
+| status     | View the status of a shuttle service |
+| logs       | View the logs of a deployment in this shuttle service |
+| clean      | Remove cargo build artifacts in the shuttle environment |
+| stop       | Stop this shuttle service |
+| secrets    | Manage secrets for this shuttle service |
+| login      | Login to the shuttle platform |
+| logout     | Log out of the shuttle platform |
+| run        | Run a shuttle service locally |
+| feedback   | Open an issue on GitHub and provide feedback |
+| project    | List or manage projects on shuttle |
+| help       | Print this message or the help of the given subcommand(s) |
 
 ## Sub-commands
 
-Several commands have sub-commands which allow more fine grained management tasks.  For example, the project command has the following sub-commands:
+Several commands have sub-commands which allow more fine grained management tasks.
+For example, the `project` command has the following sub-commands:
 
 | Sub-command | Explanation |
 | ----------- | ----------- |
-| new         | create a new project container  |
-| list        | list all projects available to the calling account |
-| rm          | remove the project environment from shuttle |
-| status      | show the status of the current environment's project on shuttle |
-| help        | print a list of available sub-commands or the help of the given sub-command |
+| start       | Create an environment for this project on shuttle |
+| status      | Check the status of this project's environment on shuttle |
+| stop        | Destroy this project's environment (container) on shuttle |
+| restart     | Destroy and create an environment for this project on shuttle |
+| list        | List all projects belonging to the calling account |
 
 Sub-commands may also have options which can be set if desired.
-
-
