--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -11,7 +11,7 @@ This section is aimed at collecting common questions users have to provide docum
     and also across all the projects that are owned by your account.
   </Accordion>
   <Accordion title="What happens when I create a project?">
-    The `cargo shuttle project new` command creates a Docker containers, which will
+    The `cargo shuttle project new` command starts a Docker container, which will
     stay up indefinitely as long as it [is active](../idle-projects). Your project container
     has a limit of 6 GiB memory (4 GiB during high contention, which is very rare) and 4 vCPUs.
   </Accordion>
