--- a/examples/poem.mdx
+++ b/examples/poem.mdx
@@ -49,7 +49,7 @@ async fn poem() -> ShuttlePoem<impl poem::Endpoint> {
 ```
 Create a project, this will start an isolated deployer container for you under the hood:
 ```bash
-cargo shuttle project new
+cargo shuttle project start
 ```
 
 Finally, to deploy your app, all you need to do is:
@@ -167,7 +167,7 @@ struct Todo {
 ```
 Create a project, this will start an isolated deployer container for you under the hood:
 ```bash
-cargo shuttle project new
+cargo shuttle project start
 ```
 
 Finally, to deploy your app, all you need to do is:
