--- a/introduction/idle-projects.mdx
+++ b/introduction/idle-projects.mdx
@@ -34,7 +34,7 @@ can be freely modified. You can change it by passing in a flag when
 creating a project:
 
 ```bash
-cargo shuttle project new --idle-minutes 40
+cargo shuttle project start --idle-minutes 40
 ```
 
 If you pass in `--idle-minutes 0`
