--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -16,7 +16,7 @@ cargo shuttle init
 If you didn't create the project environment in the init command, run:
 
 ```sh
-cargo shuttle project new
+cargo shuttle project start
 ```
 
 And to deploy it:
