--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -104,7 +104,7 @@ Note that your `Secrets.toml` file should be in the root of your directory!
 
 Create a project, this will start an isolated deployer container for you under the hood:
 ```bash
-cargo shuttle project new
+cargo shuttle project start
 ```
 Finally, to deploy your app, all you need to do is:
 ```bash
