--- a/examples/shuttle-next.mdx
+++ b/examples/shuttle-next.mdx
@@ -132,7 +132,7 @@ shuttle_next::app! {
 
 Finally, to deploy your app, all you need to do is:
 ```bash
-cargo shuttle project new
+cargo shuttle project start
 ```
 
 And then:
