--- a/resources/shuttle-static-folder.mdx
+++ b/resources/shuttle-static-folder.mdx
@@ -16,6 +16,9 @@ async fn main(
 ) -> __ { ... }
 ```
 
+> Note: if you use `shuttle-static-folder` in your project and your project is a workspace, the static assets
+> folder needs to be in the root of the workspace.
+
 ### Parameters
 | Parameter | Type | Default  | Description                                                        |
 |-----------|------|----------|--------------------------------------------------------------------|
