docs: add workspace docs (#66)

--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -12,7 +12,7 @@ This section is aimed at collecting common questions users have to provide docum
   </Accordion>
   <Accordion title="What happens when I create a project?">
     The `cargo shuttle project start` command starts a Docker container, which will
-    stay up indefinitely as long as it [is active](../idle-projects). Your project container
+    stay up indefinitely as long as it [is active](../introduction/idle-projects). Your project container
     has a limit of 6 GiB memory (4 GiB during high contention, which is very rare) and 4 vCPUs.
   </Accordion>
   <Accordion title="What happens when I deploy to shuttle?">
