--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -37,5 +37,11 @@ This section is aimed at collecting common questions users have to provide docum
   <Accordion title="Can I rename my shuttle project?">
     Certainly. Just create a `Shuttle.toml` file in the same directory where your `Cargo.toml` is and add `name = "your-project-name"`.
   </Accordion>
+  <Accordion title="Where geographically are deployments hosted?">
+    Currently, all deployments are in the eu-west1 region (London).
+  </Accordion>
+  <Accordion title="Do we plan to support multiple regions?">
+    We do plan to support multiple regions, but we can't give a precise ETA yet.
+  </Accordion>
 </AccordionGroup>
 
